canary-mesh-multi-bookinfo/bookinfo-b/blackbox-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookinfo-b-blackbox
  namespace: canary-mesh-multi-bookinfo
  labels:
    app: bookinfo-b-blackbox
spec:
  selector:
    app: bookinfo-b-blackbox
  ports:
    - name: http
      port: 9115
      targetPort: http
