canary-mesh-multi-bookinfo/bookinfo-b/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookinfo-b-productpage-canary
  namespace: canary-mesh-multi-bookinfo
  labels:
    app.kubernetes.io/part-of: bookinfo
    app.kubernetes.io/instance: bookinfo-b
    app.kubernetes.io/name: productpage
spec:
  selector:
    app.kubernetes.io/instance: bookinfo-b
    app.kubernetes.io/name: productpage
  ports:
    - name: http
      port: 9080
      targetPort: http
      protocol: TCP
