canary-mesh-multi-bookinfo/bookinfo-b/workloads.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookinfo-b-details-stable
  namespace: canary-mesh-multi-bookinfo
  labels:
    app.kubernetes.io/part-of: bookinfo
    app.kubernetes.io/instance: bookinfo-b
    app.kubernetes.io/name: details
    track: stable
spec:
  selector:
    app.kubernetes.io/instance: bookinfo-b
    app.kubernetes.io/name: details
    track: stable
  ports:
    - name: http
      port: 9080
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookinfo-b-details-stable
  namespace: canary-mesh-multi-bookinfo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: bookinfo-b
      app.kubernetes.io/name: details
      track: stable
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /stats/prometheus
        prometheus.io/port: "15090"
      labels:
        app.kubernetes.io/part-of: bookinfo
        app.kubernetes.io/instance: bookinfo-b
        app.kubernetes.io/name: details
        app.kubernetes.io/version: v1
        track: stable
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: bookinfo-b-details
      containers:
        - name: details
          image: quay.io/sail-dev/examples-bookinfo-details-v1:1.20.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9080
---
apiVersion: v1
kind: Service
metadata:
  name: bookinfo-b-details-canary
  namespace: canary-mesh-multi-bookinfo
  labels:
    app.kubernetes.io/part-of: bookinfo
    app.kubernetes.io/instance: bookinfo-b
    app.kubernetes.io/name: details
    track: canary
spec:
  selector:
    app.kubernetes.io/instance: bookinfo-b
    app.kubernetes.io/name: details
    track: canary
  ports:
    - name: http
      port: 9080
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookinfo-b-details-canary
  namespace: canary-mesh-multi-bookinfo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: bookinfo-b
      app.kubernetes.io/name: details
      track: canary
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /stats/prometheus
        prometheus.io/port: "15090"
      labels:
        app.kubernetes.io/part-of: bookinfo
        app.kubernetes.io/instance: bookinfo-b
        app.kubernetes.io/name: details
        app.kubernetes.io/version: v1
        track: canary
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: bookinfo-b-details
      containers:
        - name: details
          image: quay.io/sail-dev/examples-bookinfo-details-v1:1.20.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9080
---
apiVersion: v1
kind: Service
metadata:
  name: bookinfo-b-ratings-stable
  namespace: canary-mesh-multi-bookinfo
  labels:
    app.kubernetes.io/part-of: bookinfo
    app.kubernetes.io/instance: bookinfo-b
    app.kubernetes.io/name: ratings
    track: stable
spec:
  selector:
    app.kubernetes.io/instance: bookinfo-b
    app.kubernetes.io/name: ratings
    track: stable
  ports:
    - name: http
      port: 9080
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookinfo-b-ratings-stable
  namespace: canary-mesh-multi-bookinfo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: bookinfo-b
      app.kubernetes.io/name: ratings
      track: stable
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /stats/prometheus
        prometheus.io/port: "15090"
      labels:
        app.kubernetes.io/part-of: bookinfo
        app.kubernetes.io/instance: bookinfo-b
        app.kubernetes.io/name: ratings
        app.kubernetes.io/version: v1
        track: stable
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: bookinfo-b-ratings
      containers:
        - name: ratings
          image: quay.io/sail-dev/examples-bookinfo-ratings-v1:1.20.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9080
---
apiVersion: v1
kind: Service
metadata:
  name: bookinfo-b-ratings-canary
  namespace: canary-mesh-multi-bookinfo
  labels:
    app.kubernetes.io/part-of: bookinfo
    app.kubernetes.io/instance: bookinfo-b
    app.kubernetes.io/name: ratings
    track: canary
spec:
  selector:
    app.kubernetes.io/instance: bookinfo-b
    app.kubernetes.io/name: ratings
    track: canary
  ports:
    - name: http
      port: 9080
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookinfo-b-ratings-canary
  namespace: canary-mesh-multi-bookinfo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: bookinfo-b
      app.kubernetes.io/name: ratings
      track: canary
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /stats/prometheus
        prometheus.io/port: "15090"
      labels:
        app.kubernetes.io/part-of: bookinfo
        app.kubernetes.io/instance: bookinfo-b
        app.kubernetes.io/name: ratings
        app.kubernetes.io/version: v1
        track: canary
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: bookinfo-b-ratings
      containers:
        - name: ratings
          image: quay.io/sail-dev/examples-bookinfo-ratings-v1:1.20.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9080
---
apiVersion: v1
kind: Service
metadata:
  name: bookinfo-b-reviews-stable
  namespace: canary-mesh-multi-bookinfo
  labels:
    app.kubernetes.io/part-of: bookinfo
    app.kubernetes.io/instance: bookinfo-b
    app.kubernetes.io/name: reviews
    track: stable
spec:
  selector:
    app.kubernetes.io/instance: bookinfo-b
    app.kubernetes.io/name: reviews
    track: stable
  ports:
    - name: http
      port: 9080
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookinfo-b-reviews-stable
  namespace: canary-mesh-multi-bookinfo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: bookinfo-b
      app.kubernetes.io/name: reviews
      track: stable
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /stats/prometheus
        prometheus.io/port: "15090"
      labels:
        app.kubernetes.io/part-of: bookinfo
        app.kubernetes.io/instance: bookinfo-b
        app.kubernetes.io/name: reviews
        app.kubernetes.io/version: v2
        track: stable
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: bookinfo-b-reviews
      containers:
        - name: reviews
          image: quay.io/sail-dev/examples-bookinfo-reviews-v2:1.20.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9080
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: wlp-output
              mountPath: /opt/ibm/wlp/output
      volumes:
        - name: tmp
          emptyDir: {}
        - name: wlp-output
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: bookinfo-b-reviews-canary
  namespace: canary-mesh-multi-bookinfo
  labels:
    app.kubernetes.io/part-of: bookinfo
    app.kubernetes.io/instance: bookinfo-b
    app.kubernetes.io/name: reviews
    track: canary
spec:
  selector:
    app.kubernetes.io/instance: bookinfo-b
    app.kubernetes.io/name: reviews
    track: canary
  ports:
    - name: http
      port: 9080
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookinfo-b-reviews-canary
  namespace: canary-mesh-multi-bookinfo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: bookinfo-b
      app.kubernetes.io/name: reviews
      track: canary
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /stats/prometheus
        prometheus.io/port: "15090"
      labels:
        app.kubernetes.io/part-of: bookinfo
        app.kubernetes.io/instance: bookinfo-b
        app.kubernetes.io/name: reviews
        app.kubernetes.io/version: v3
        track: canary
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: bookinfo-b-reviews
      containers:
        - name: reviews
          image: quay.io/sail-dev/examples-bookinfo-reviews-v3:1.20.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9080
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: wlp-output
              mountPath: /opt/ibm/wlp/output
      volumes:
        - name: tmp
          emptyDir: {}
        - name: wlp-output
          emptyDir: {}
